[gd_scene load_steps=15 format=2]

[ext_resource path="res://5x5_pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pause.gd" type="Script" id=2]
[ext_resource path="res://QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resume.tscn" type="PackedScene" id=4]
[ext_resource path="res://pixelmix.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://New Piskel-4.png.png" type="Texture" id=6]
[ext_resource path="res://Sprite11-0004.png" type="Texture" id=7]
[ext_resource path="res://Options.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_left = 3.0
anchor_top = 3.6
anchor_right = 3.0
anchor_bottom = 3.6
margin_left = -120.0
margin_top = -144.0
margin_right = 904.0
margin_bottom = 464.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.278431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
margin_left = 312.0
margin_top = 96.0
margin_right = 696.0
margin_bottom = 248.0
theme = SubResource( 4 )
text = "Paused
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
margin_left = 368.0
margin_top = 304.0
margin_right = 632.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_right = 264.0
margin_bottom = 23.0

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_top = 27.0
margin_right = 264.0
margin_bottom = 50.0

[node name="DeathOverlay" type="ColorRect" parent="."]
visible = false
anchor_left = 3.0
anchor_top = 3.6
anchor_right = 3.0
anchor_bottom = 3.6
margin_left = -120.0
margin_top = -144.0
margin_right = 904.0
margin_bottom = 464.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.278431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="DeathOverlay"]
margin_left = 256.0
margin_top = 104.0
margin_right = 726.0
margin_bottom = 256.0
theme = SubResource( 4 )
text = "You  Have  perished
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMunu" type="VBoxContainer" parent="DeathOverlay"]
margin_left = 368.0
margin_top = 304.0
margin_right = 632.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="DeathOverlay/DeathMunu" instance=ExtResource( 4 )]
margin_right = 264.0
margin_bottom = 23.0
text = "Restart"

[node name="QuitButton" parent="DeathOverlay/DeathMunu" instance=ExtResource( 3 )]
margin_top = 27.0
margin_right = 264.0
margin_bottom = 50.0

[node name="Options" parent="." instance=ExtResource( 8 )]
visible = false

[node name="GameMenu" type="Control" parent="."]
visible = false
margin_left = 360.0
margin_top = 24.0
margin_right = 400.0
margin_bottom = 64.0
theme = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GameMenu"]
margin_right = 312.0
margin_bottom = 464.0
texture = ExtResource( 6 )
patch_margin_left = 30
patch_margin_right = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
anchor_right = 7.8
anchor_bottom = 11.6
margin_top = 30.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameMenu/VBoxContainer"]
margin_right = 312.0
margin_bottom = 24.0
theme = SubResource( 6 )
text = "Game Menu"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GameMenu/VBoxContainer"]
margin_top = 40.0
margin_right = 312.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 35 )

[node name="New Game" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 91.0
margin_right = 312.0
margin_bottom = 131.0
rect_min_size = Vector2( 220, 40 )
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/New Game"]
anchor_right = 1.0
anchor_bottom = 0.975
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save Game" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 147.0
margin_right = 312.0
margin_bottom = 187.0
rect_min_size = Vector2( 220, 40 )
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Save Game"]
anchor_right = 1.0
anchor_bottom = 0.975
text = "Save Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load Game" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 203.0
margin_right = 312.0
margin_bottom = 243.0
rect_min_size = Vector2( 220, 40 )
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Load Game"]
anchor_right = 1.0
anchor_bottom = 0.975
text = "Load Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 259.0
margin_right = 312.0
margin_bottom = 299.0
rect_min_size = Vector2( 220, 40 )
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 0.975
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 315.0
margin_right = 312.0
margin_bottom = 355.0
rect_min_size = Vector2( 220, 40 )
texture_normal = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/Exit"]
anchor_right = 1.0
anchor_bottom = 0.975
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="PauseOverlay/PauseMenu/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="DeathOverlay/DeathMunu/Resume" to="." method="_on_Restart_button_up"]
[connection signal="value_changed" from="Options/HBoxContainer/column2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[editable path="Options"]
